基础环境配置